kubernetes/delete_depl/node_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-model
  labels:
    app: url-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-model
  template:
    metadata:
      labels:
        app: url-model
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: url-model
        image: ghcr.io/remla24-team-15/model-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: url-model-serv
spec:
  selector:
    app: url-model
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-app
  labels:
    app: url-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-app
  template:
    metadata:
      labels:
        app: url-app
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: url-app
        image: ghcr.io/remla24-team-15/app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: url-app-serv
spec:
  selector:
    app: url-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: url-app-serv
      port:
        number: 8080
